Fix table wrapping

--- a/docs/_static/extra.css
+++ b/docs/_static/extra.css
@@ -25,3 +25,17 @@ code {
   padding: 3px;
   font-size: 90%;
 }
+
+/* override table width restrictions */
+@media screen and (min-width: 767px) {
+
+   .wy-table-responsive table td {
+      /* !important prevents the common CSS stylesheets from overriding
+         this as on RTD they are loaded after this stylesheet */
+      white-space: normal !important;
+   }
+
+   .wy-table-responsive {
+      overflow: visible !important;
+   }
+}
